z-index fixed

--- a/src/common.blocks/sidebar/sidebar.less
+++ b/src/common.blocks/sidebar/sidebar.less
@@ -141,7 +141,7 @@
     right: -100%;
     height: 100%;
     top: calc(@headerMobHeight + 5px);
-    z-index: 9999;
+    z-index: 9989;
     overflow: auto;
     padding: 0 16px 88px;
     background: @sidebarBg;
